--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ MarkupSafe==3.0.2
 narwhals==1.41.1
 numpy==2.3.0
 oauth2client==4.1.3
+openai==1.55.3
 oauthlib==3.2.2
 openpyxl==3.1.5
 packaging==24.2
